src/test/scala/au/edu/mq/comp/perentiemq/iml/prederr3.out
src/test/scala/au/edu/mq/comp/perentiemq/iml/prederr3.iml:3:20: error: ')' expected
    assert (a <= b <= c);
                   ^

